opam-version: "1.2"
version: "0.1"
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-xlsx-parser"
dev-repo: "https://github.com/brendanlong/ocaml-xlsx-parser.git"
bug-reports: "https://github.com/brendanlong/ocaml-xlsx-parser/issues"

build: [jbuilder build]
build-test: [jbuilder runtest]
install: [jbuilder install]
remove: [jbuilder uninstall]

depends: [
  "core_kernel" {>= "v0.9.0"}
  "camlzip"
  "ppx_jane"
  "stdint"
  "xml-light"

  "bisect_ppx" {build & >= "1.3.0"}
  "jbuilder" {build}

  "csv" {test}
  "ounit" {test}
]

available: [ocaml-version >= "4.04.2"]
