opam-version: "2.0"
authors: ["Brendan Long <self@brendanlong.com>"]
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-ooxml"
dev-repo: "git+https://github.com/brendanlong/ocaml-ooxml.git"
bug-reports: "https://github.com/brendanlong/ocaml-ooxml/issues"
doc: "https://brendanlong.github.io/ocaml-ooxml/doc"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "camlzip"
  "ocaml" {>= "4.04.2"}
  "ppx_jane"
  "ptime"
  "spreadsheetml"

  "bisect_ppx" {build & >= "1.3.0"}
  "dune" {build}

  "csv" {test}
  "ounit" {test}
]
