opam-version: "1.2"
version: "0.1"
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-ooxml"
dev-repo: "https://github.com/brendanlong/ocaml-ooxml.git"
bug-reports: "https://github.com/brendanlong/ocaml-ooxml/issues"

build: [jbuilder build]
build-test: [jbuilder runtest]
install: [jbuilder install]
remove: [jbuilder uninstall]

depends: [
  "base" {>= "v0.9.0"}
  "ppx_jane"
  "stdint"
  "xml-light"

  "bisect_ppx" {build & >= "1.3.0"}
  "jbuilder" {build & >= "1.0+beta18"}

  "ounit" {test}
]

available: [ocaml-version >= "4.04.2"]
